crates/baml-bridge-derive/tests/ui/nested_variant_render_as_union.stderr
error: `#[render(...)]` on variants is not supported for `#[baml(as_union)]` enums; use type-level renderers instead
 --> tests/ui/nested_variant_render_as_union.rs:6:5
  |
6 | /     #[render(style = "json")]
7 | |     A,
  | |_____^
