crates/baml-bridge-derive/tests/ui/nested_variant_render_as_union.rs
use baml_bridge_derive::BamlType;

#[derive(BamlType)]
#[baml(as_union)]
enum E {
    #[render(style = "json")]
    A,
}

fn main() {}
